--- a/.github/workflows/firebase-hosting-production-pull-request.yml
+++ b/.github/workflows/firebase-hosting-production-pull-request.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on PR
 'on':
   pull_request:
     branches:
-      - development
+      - main
 
 jobs:
   build_and_preview:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: >-
           sudo snap install flutter --classic && flutter
-          config --enable-web && flutter build web -t lib/main_development.dart
+          config --enable-web && flutter build web -t lib/main_production.dart
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
