Add bookmark functionality - Use fluttertoast package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
