--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
