--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -29,6 +29,8 @@ linter:
     unnecessary_overrides: false
     avoid_setters_without_getters: false
     use_build_context_synchronously: false
+    avoid_web_libraries_in_flutter: false
+    use_setters_to_change_properties: false
 
     # DO avoid print calls in production code.
     #
