--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -31,6 +31,7 @@ linter:
     use_build_context_synchronously: false
     avoid_web_libraries_in_flutter: false
     use_setters_to_change_properties: false
+    avoid_dynamic_calls: false
 
     # DO avoid print calls in production code.
     #
