--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_switch: ^0.3.2
   universal_html: ^2.0.8
   dio: ^4.0.4
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
