Add matkul data sources & repository

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -25,4 +25,5 @@ jobs:
           flutter doctor
           flutter pub get
           flutter test --coverage
+          flutter analyze
           bash <(curl -s https://codecov.io/bash -t ${{ secrets.CODECOV_TOKEN }})
