--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
+          flutter-version: '2.2.3'
       - run: |
           flutter doctor
           flutter pub get
