--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,10 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '10.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+# pod 'Firebase/Analytics'
+$FirebaseAnalyticsWithoutAdIdSupport = true
 
 project 'Runner', {
   'Debug' => :debug,
