Add Force update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dio: ^4.0.4
   material_design_icons_flutter: ^4.0.5955
   flutter_vector_icons: ^1.0.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -49,3 +50,4 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/icons/
