docs: remove production google-services

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -10,3 +10,5 @@ GeneratedPluginRegistrant.java
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 key.properties
 app/release.jks
+
+app/src/production/google-services.json
