--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,7 +16,7 @@ jobs:
           echo "${{ secrets.ENV }}" | base64 --decode > ${{ github.workspace }}/.env &&
           sudo snap install flutter --classic && 
           flutter config --enable-web && flutter pub get && 
-          flutter pub run build_runner --delete-conflicting-outputs && 
+          flutter pub run build_runner build --delete-conflicting-outputs && 
           flutter build web -t lib/main_development.dart
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
