--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,28 +15,29 @@ dependencies:
   cupertino_icons: ^1.0.4
   ristek_material_component: ^0.0.15
   states_rebuilder: ^6.1.0+1
-  logger: ^1.0.0
-  firebase_analytics: ^8.2.0
-  firebase_crashlytics: ^2.4.4
-  firebase_core: ^1.10.6
-  google_fonts: ^2.2.0
+  logger: ^2.0.1
+  firebase_analytics: ^10.0.0
+  firebase_crashlytics: ^3.0.0
+  firebase_core: ^2.0.0
+  google_fonts: ^4.0.4
   share: ^2.0.4
-  hive: ^1.4.4
+  hive: ^2.2.3
   path_provider: ^2.0.8
   rxdart: ^0.27.1
   shared_preferences: ^2.0.11
-  flutter_svg: ^0.22.0
-  intl: ^0.17.0
-  webview_flutter: ^2.8.0
+  flutter_svg: ^2.0.7
+  intl: ^0.18.0
+  webview_flutter: ^3.0.0
   url_launcher: ^6.0.17
   flutter_switch: ^0.3.2
   universal_html: ^2.0.8
-  dio: ^4.0.4
-  material_design_icons_flutter: ^4.0.5955
-  flutter_vector_icons: ^1.0.0
+  dio: ^4.0.6
+  material_design_icons_flutter: ^7.0.7296
+  flutter_vector_icons: ^2.0.0
   package_info: ^2.0.2
-  shimmer: ^2.0.0
-  envify: ^2.0.2
+  shimmer: ^3.0.0
+#  envify: ^2.0.3
+  envied: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
@@ -45,13 +46,14 @@ dev_dependencies:
     sdk: flutter
 
   # Help optimization.
-  very_good_analysis: ^2.4.0
+  very_good_analysis: ^5.0.0+1
 
   #  provides a concrete way of generating files using Dart code.
-  build_runner: ^2.2.0
+  build_runner: ^2.4.6
 
   # See envify.
-  envify_generator: ^2.0.2
+#  envify_generator: ^2.0.2
+  envied_generator: ^0.3.0+3
 
 flutter:
 
