--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,7 +17,7 @@ jobs:
           sudo snap install flutter --classic && 
           flutter config --enable-web && flutter pub get && 
           flutter pub run build_runner build --delete-conflicting-outputs && 
-          flutter build web -t lib/main_development.dart
+          flutter build web -t lib/main_development.dart --no-tree-shake-icons
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
